[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json","uuid"] }
serde = "*"
redis = "0.21"
anyhow = "*"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.13"

# rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
# schemars = "^0.7"
# okapi = { version = "0.4", features = ["derive_json_schema"] }