[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.load]
inherits="release"
debug-assertions = true

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json","uuid"] }
serde = "*"
redis = { version = "0.21", features = ["aio", "tokio-comp"]}
anyhow = "*"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.13"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
lazy_static = "1"
futures = { version = "0.3", features = ["executor"] }

# rocket_okapi = { version = "0.8.0-alpha-1", features = ["swagger", "rapidoc"] }
# schemars = "^0.7"
# okapi = { version = "0.4", features = ["derive_json_schema"] }